--- a/main.html
+++ b/main.html
@@ -41,7 +41,7 @@
 			<video src = "http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls width = "100%"></video>
 		</li>
 		<li>
-			<audio src = "http://commondatastorage.googleapis/" controls></audio>
+			<audio src = "http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls></audio>
 		</li>
 	</ol>
     <script type="text/javascript" src="./script.js">
