--- a/main.html
+++ b/main.html
@@ -38,10 +38,14 @@
 			<img src = "https://picsum.photos/id/123/200/300" alt = "image">
 		</li>
 		<li>
-			<video src = "http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls width = "100%"></video>
+			<video controls width = "100%">
+				<source src = "http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type = "video/mp4">
+			</video>
 		</li>
 		<li>
-			<audio src = "http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls></audio>
+			<audio controls>
+				<source src = "http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type = "audio/mpeg">
+			</audio>
 		</li>
 	</ol>
     <script type="text/javascript" src="./script.js">
